--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     }
     body {
       background-color: black;
-      color: #ff0000;
+      color: #ffffff;
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 50px;
@@ -28,42 +28,42 @@
       height: auto;
       margin-top: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px #ff0000, 0 0 30px #ff0000;
+      box-shadow: 0 0 15px #ffffff, 0 0 30px #ffffff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     h1 {
       font-size: 36px;
-      text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000;
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     p {
       font-size: 18px;
-      text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     a {
-      color: #ff0000;
+      color: #ffffff;
       text-decoration: none;
       font-weight: bold;
-      text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
       transition: text-shadow 0.3s ease;
     }
     a:hover {
-      text-shadow: 0 0 15px #ff0000, 0 0 25px #ff0000;
+      text-shadow: 0 0 15px #ffffff, 0 0 25px #ffffff;
     }
     .pentagram {
       font-size: 60px;
-      color: #ff0000;
-      text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000;
+      color: #ffffff;
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff;
       animation: pulseGlow 2s infinite ease-in-out;
       margin-bottom: 20px;
     }
     @keyframes pulseGlow {
       0%, 100% {
-        text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000;
+        text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff;
       }
       50% {
-        text-shadow: 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000;
+        text-shadow: 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff;
       }
     }
   </style>
@@ -71,7 +71,7 @@
 <body>
   <div class="pentagram">⛧</div>
   <h1>Page Not Found</h1>
-  <img src="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true" alt="Anarchy Logo">
+  <img src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" alt="JuJu Logo">
   <p>Redirecting to <a href="https://juju.wtf">juju.wtf</a></p>
 </body>
 </html>
