--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     let titleIndex = 0;
     let msgIndex = 0;
     const titleText = "⛧ JuJu.wtf ";
-    const messages = ["ジュジュ", "JuJu"];
+    const messages = ["ジュジュ", "juju.wtf"];
     let lastTitleUpdate = 0;
     let lastGlitchUpdate = 0;
     let titleChanged = false;
