--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/president.mp4" type="video/mp4">
   </video>
   <div class="container">
-    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/artworks-IsvPtOHfgxUEgyzU-6YSkXg-t500x500.jpg?raw=true" alt="pfp" class="pfp">
+    <img src="https://raw.githubusercontent.com/jujuexe/Juju-wtf/main/artworks-IsvPtOHfgxUEgyzU-6YSkXg-t500x500.jpg" alt="pfp" class="pfp">
     <div class="title" id="title">JuJu.wtf</div>
   </div>
   <script>
