--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </style>
 </head>
 <body>
-  <div class="intro-screen" id="intro-screen">Click anywhere to begin</div>
+  <div class="intro-screen" id="intro-screen">click anywhere</div>
 
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/fun.mp4" type="video/mp4">
@@ -129,7 +129,7 @@
     let titleIndex = 0;
     let msgIndex = 0;
     const titleText = "JuJu.wtf ";
-    const messages = ["JuJu.wtf", "Welcome"];
+    const messages = ["JuJu.wtf", "ジュジュ"];
     let lastTitleUpdate = 0;
     let lastGlitchUpdate = 0;
     let titleStarted = false;
