--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp">
   <meta property="og:url" content="https://juju.wtf/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="JuJu">
+  <meta property="og:title" content="My Site">
   <meta property="og:description" content="Made by @JuJu.wtf">
   <meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#0a0a0a">
-  <title>JuJu.wtf</title>
+  <title>My Site</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -119,7 +119,7 @@
 
   <div class="container">
     <img src="https://github.com/jujuexe/Juju-wtf/blob/main/e2f1885490d77b56201ef3ceb5220328.jpg?raw=true" alt="pfp" class="pfp">
-    <div class="title" id="title">JuJu.wtf</div>
+    <div class="title" id="title">Welcome</div>
   </div>
 
   <script>
@@ -128,8 +128,8 @@
     const titleElement = document.getElementById('title');
     let titleIndex = 0;
     let msgIndex = 0;
-    const titleText = "JuJu.wtf ";
-    const messages = ["JuJu.wtf", "ジュジュ"];
+    const titleText = "Welcome ";
+    const messages = ["Welcome", "Hello!"];
     let lastTitleUpdate = 0;
     let lastGlitchUpdate = 0;
     let titleStarted = false;
