--- a/index.html
+++ b/index.html
@@ -1,174 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp">
-  <meta property="og:url" content="https://juju.wtf/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="My Site">
-  <meta property="og:description" content="Made by @JuJu.wtf">
-  <meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a0a0a">
-  <title>My Site</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --beige: #f5e9d3;
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      background-color: #0a0a0a;
-      color: var(--beige);
-      font-family: 'Inter', sans-serif;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    #background-video {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    .intro-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      z-index: 100;
-      transition: opacity 0.5s ease;
-      text-align: center;
-      padding: 0 10px;
-      color: var(--beige);
-      text-shadow: 0 0 10px var(--beige), 0 0 20px var(--beige);
-    }
-
-    .hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 10;
-    }
-
-    .pfp {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px var(--beige), 0 0 20px var(--beige);
-      animation: pulseGlow 1.2s infinite ease-in-out;
-    }
-
-    .title {
-      font-size: 2.2rem;
-      letter-spacing: 0.1rem;
-      color: var(--beige);
-      animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px var(--beige);
-    }
-
-    @keyframes pulseGlow {
-      0%, 100% {
-        text-shadow: 0 0 12px var(--beige), 0 0 24px var(--beige), 0 0 48px var(--beige);
-      }
-      50% {
-        text-shadow: 0 0 16px var(--beige), 0 0 32px var(--beige), 0 0 56px var(--beige);
-      }
-    }
-
-    .glitch {
-      animation: glitchEffect 0.4s ease-in-out;
-    }
-
-    @keyframes glitchEffect {
-      0% { transform: scale(1) skewX(0deg); opacity: 1; }
-      10% { transform: scale(1.05) skewX(10deg); opacity: 0.6; }
-      20% { transform: scale(1) skewX(-5deg); opacity: 1; }
-      30% { transform: scale(1.05) skewX(15deg); opacity: 0.7; }
-      40% { transform: scale(1) skewX(-10deg); opacity: 1; }
-      100% { transform: scale(1) skewX(0deg); opacity: 1; }
-    }
-  </style>
-</head>
-<body>
-  <div class="intro-screen" id="intro-screen">click anywhere</div>
-
-  <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/fun.mp4" type="video/mp4">
-  </video>
-
-  <div class="container">
-    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/e2f1885490d77b56201ef3ceb5220328.jpg?raw=true" alt="pfp" class="pfp">
-    <div class="title" id="title">Welcome</div>
-  </div>
-
-  <script>
-    const introScreen = document.getElementById('intro-screen');
-    const video = document.getElementById('background-video');
-    const titleElement = document.getElementById('title');
-    let titleIndex = 0;
-    let msgIndex = 0;
-    const titleText = "Welcome ";
-    const messages = ["Welcome", "Hello!"];
-    let lastTitleUpdate = 0;
-    let lastGlitchUpdate = 0;
-    let titleStarted = false;
-
-    introScreen.addEventListener('click', function () {
-      this.classList.add('hidden');
-      video.play().catch(error => console.error('Video playback failed:', error));
-      lastTitleUpdate = performance.now();
-      lastGlitchUpdate = performance.now();
-      titleStarted = true;
-      requestAnimationFrame(animateLoop);
-    });
-
-    document.addEventListener('visibilitychange', () => {
-      if (document.visibilityState === 'visible' && introScreen.classList.contains('hidden')) {
-        video.play().catch(() => {});
-      }
-    });
-
-    function animateLoop(timestamp) {
-      if (titleStarted) {
-        if (timestamp - lastTitleUpdate > 200) {
-          document.title = titleText.slice(titleIndex) + titleText.slice(0, titleIndex);
-          titleIndex = (titleIndex + 1) % titleText.length;
-          lastTitleUpdate = timestamp;
-        }
-
-        if (timestamp - lastGlitchUpdate > 4000) {
-          titleElement.classList.add('glitch');
-          setTimeout(() => {
-            titleElement.textContent = messages[msgIndex];
-            titleElement.classList.remove('glitch');
-            msgIndex = (msgIndex + 1) % messages.length;
-          }, 200);
-          lastGlitchUpdate = timestamp;
-        }
-      }
-      requestAnimationFrame(animateLoop);
-    }
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp"><meta property="og:url" content="https://juju.wtf/"><meta property="og:type" content="website"><meta property="og:title" content="My Site"><meta property="og:description" content="Made by @JuJu.wtf"><meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" content="#0a0a0a"><title>My Site</title><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"><style>:root{--b:#f5e9d3}*{box-sizing:border-box}body{margin:0;background:#0a0a0a;color:var(--b);font-family:'Inter',sans-serif;height:100vh;overflow:hidden}#v{position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:-1}.i{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;display:flex;justify-content:center;align-items:center;font-size:2rem;z-index:100;transition:opacity .5s ease;text-align:center;padding:0 10px;color:var(--b);text-shadow:0 0 10px var(--b),0 0 20px var(--b)}.h{opacity:0;pointer-events:none}.c{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;z-index:10}.p{width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:20px;box-shadow:0 0 10px var(--b),0 0 20px var(--b);animation:pg 1.2s infinite ease-in-out}@keyframes pg{0%,100%{text-shadow:0 0 12px var(--b),0 0 24px var(--b),0 0 48px var(--b)}50%{text-shadow:0 0 16px var(--b),0 0 32px var(--b),0 0 56px var(--b)}}@keyframes gE{0%{transform:scale(1) skewX(0deg);opacity:1}10%{transform:scale(1.05) skewX(10deg);opacity:.6}20%{transform:scale(1) skewX(-5deg);opacity:1}30%{transform:scale(1.05) skewX(15deg);opacity:.7}40%{transform:scale(1) skewX(-10deg);opacity:1}100%{transform:scale(1) skewX(0deg);opacity:1}}.g{animation:gE .4s ease-in-out}</style></head><body><div class="i" id="i">click anywhere</div><video id="v" playsinline webkit-playsinline loop preload="metadata"><source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/fun.mp4" type="video/mp4"></video><div class="c"><img src="https://github.com/jujuexe/Juju-wtf/blob/main/e2f1885490d77b56201ef3ceb5220328.jpg?raw=true" alt="pfp" class="p"></div><script>const i=document.getElementById("i"),v=document.getElementById("v");i.addEventListener("click",()=>{i.classList.add("h");v.play().catch(e=>{})});document.addEventListener("visibilitychange",()=>{document.visibilityState==="visible"&&i.classList.contains("h")&&v.play().catch(()=>{})});</script></body></html>
