--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-<!DOCTYPE html><html lang="en"><head><link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp"><meta property="og:url" content="https://juju.wtf/"><meta property="og:type" content="website"><meta property="og:title" content="My Site"><meta property="og:description" content="Made by @JuJu.wtf"><meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" content="#0a0a0a"><title>My Site</title><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"><style>:root{--b:#f5e9d3}*{box-sizing:border-box}body{margin:0;background:#0a0a0a;color:var(--b);font-family:'Inter',sans-serif;height:100vh;overflow:hidden}#v{position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:-1}.i{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;display:flex;justify-content:center;align-items:center;font-size:2rem;z-index:100;transition:opacity .5s ease;text-align:center;padding:0 10px;color:var(--b);text-shadow:0 0 10px var(--b),0 0 20px var(--b)}.h{opacity:0;pointer-events:none}.c{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;z-index:10}.p{width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:20px;box-shadow:0 0 10px var(--b),0 0 20px var(--b);animation:pg 1.2s infinite ease-in-out}@keyframes pg{0%,100%{text-shadow:0 0 12px var(--b),0 0 24px var(--b),0 0 48px var(--b)}50%{text-shadow:0 0 16px var(--b),0 0 32px var(--b),0 0 56px var(--b)}}@keyframes gE{0%{transform:scale(1) skewX(0deg);opacity:1}10%{transform:scale(1.05) skewX(10deg);opacity:.6}20%{transform:scale(1) skewX(-5deg);opacity:1}30%{transform:scale(1.05) skewX(15deg);opacity:.7}40%{transform:scale(1) skewX(-10deg);opacity:1}100%{transform:scale(1) skewX(0deg);opacity:1}}.g{animation:gE .4s ease-in-out}</style></head><body><div class="i" id="i">click anywhere</div><video id="v" playsinline webkit-playsinline loop preload="metadata"><source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/fun.mp4" type="video/mp4"></video><div class="c"><img src="https://github.com/jujuexe/Juju-wtf/blob/main/e2f1885490d77b56201ef3ceb5220328.jpg?raw=true" alt="pfp" class="p"></div><script>const i=document.getElementById("i"),v=document.getElementById("v");i.addEventListener("click",()=>{i.classList.add("h");v.play().catch(e=>{})});document.addEventListener("visibilitychange",()=>{document.visibilityState==="visible"&&i.classList.contains("h")&&v.play().catch(()=>{})});</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:url" content="https://juju.wtf/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="My Site" />
+  <meta property="og:description" content="Made by @JuJu.wtf" />
+  <meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" />
+  <meta name="theme-color" content="#0a0a0a" />
+  <title>My Site</title>
+  <link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --b: #f5e9d3;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      background: #0a0a0a;
+      color: var(--b);
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    #v {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      color: var(--b);
+      text-shadow: 0 0 10px var(--b), 0 0 20px var(--b);
+      z-index: 10;
+      transition: opacity 1s ease;
+    }
+
+    .fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    @keyframes glow {
+      0%, 100% {
+        text-shadow: 0 0 12px var(--b), 0 0 24px var(--b), 0 0 48px var(--b);
+      }
+      50% {
+        text-shadow: 0 0 16px var(--b), 0 0 32px var(--b), 0 0 56px var(--b);
+      }
+    }
+
+    .overlay span {
+      animation: glow 1.2s infinite ease-in-out;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay" id="overlay"><span>click anywhere</span></div>
+  <video id="v" playsinline webkit-playsinline loop preload="metadata">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/fun.mp4" type="video/mp4" />
+  </video>
+  <script>
+    const overlay = document.getElementById("overlay");
+    const video = document.getElementById("v");
+
+    overlay.addEventListener("click", () => {
+      overlay.classList.add("fade-out");
+      video.play().catch(() => {});
+    });
+
+    document.addEventListener("visibilitychange", () => {
+      if (document.visibilityState === "visible" && overlay.classList.contains("fade-out")) {
+        video.play().catch(() => {});
+      }
+    });
+  </script>
+</body>
+</html>
