--- a/index.html
+++ b/index.html
@@ -45,22 +45,43 @@
       align-items: center;
       font-size: 2rem;
       color: var(--b);
-      text-shadow: 0 0 10px var(--b), 0 0 20px var(--b);
       z-index: 100;
       transition: opacity 0.5s ease;
       cursor: pointer;
     }
 
     .i span {
-      animation: glow 1.2s infinite ease-in-out;
+      animation: rainbowGlow 3s infinite linear;
     }
 
-    @keyframes glow {
-      0%, 100% {
-        text-shadow: 0 0 12px var(--b), 0 0 24px var(--b), 0 0 48px var(--b);
+    @keyframes rainbowGlow {
+      0% {
+        text-shadow: 0 0 10px red, 0 0 20px orange, 0 0 30px yellow;
+        color: red;
+      }
+      16% {
+        text-shadow: 0 0 10px orange, 0 0 20px yellow, 0 0 30px green;
+        color: orange;
+      }
+      33% {
+        text-shadow: 0 0 10px yellow, 0 0 20px green, 0 0 30px cyan;
+        color: yellow;
       }
       50% {
-        text-shadow: 0 0 16px var(--b), 0 0 32px var(--b), 0 0 56px var(--b);
+        text-shadow: 0 0 10px green, 0 0 20px cyan, 0 0 30px blue;
+        color: green;
+      }
+      66% {
+        text-shadow: 0 0 10px cyan, 0 0 20px blue, 0 0 30px violet;
+        color: cyan;
+      }
+      83% {
+        text-shadow: 0 0 10px blue, 0 0 20px violet, 0 0 30px red;
+        color: blue;
+      }
+      100% {
+        text-shadow: 0 0 10px violet, 0 0 20px red, 0 0 30px orange;
+        color: violet;
       }
     }
 
