--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     @keyframes rainbowGlow {
       0% {
-        text-shadow: 0 0 10px red, 0 0 20px orange, 0 0 30px yellow;
-        color: red;
+        text-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;
+        color: white;
       }
       16% {
         text-shadow: 0 0 10px orange, 0 0 20px yellow, 0 0 30px green;
